--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   iconsax_plus: ^1.0.0
   flutter_svg: ^2.0.14
+  provider: ^6.1.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
