--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_svg: ^2.0.14
   provider: ^6.1.2
   http: ^1.2.2
+  timeago: ^3.7.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
